# Conservative_Creators_Engine

./: .gitmodules  CMakeLists.txt  CoffeeChain.project  Config.cmake.in  README.md  TODO  cce.pc.in  coffeechain.pc.in  coffeechain.project  compile_flags.txt
demo/: game.ini
demos/: CMakeLists.txt
demos/2048/: game.ini  main.c
docs/: Map2D.txt
fonts/: ascii_48x48_l5x8.ini
include/cce/: attributes.h  endianess.h  engine_common.h  engine_common_IO.h  engine_common_internal.h  engine_common_keyboard.h  os_interaction.h  utils.h  utils.hpp
include/cce/map2D/: actions.h  map2D.h
include/cce/plugins/: actions.h  actions_internal.h  actions_runactions.h  openworld.h  text_rendering.h
include/cce/plugins/map2D/: map2D.h  map2D_openworld.h  map2D_text_rendering.h
include/coffeechain/: endianess.h  engine_common.h  os_interaction.h  path_getters.h  tools.h  utils.h  utils.hpp
include/coffeechain/map2D/: base_actions.h  map2D.h
include/coffeechain/plugins/: text_rendering.h
shaders/: fragment_shader.glsl  geometry_shader.glsl  map2D.frag  map2D.vert  vertex_shader.glsl
src/: audio.c  audio.h  config.h.in  engine_common.c  engine_common.h  engine_common_file_IO.c  engine_common_glfw.c  engine_common_glfw.h  engine_common_internal.h  log.c  log.h  path_getters.c  path_getters.h  shader.c  shader.h  tools.c  tools.h  utils.c  utils.h
src/map2D/: actions.c  base_actions.c  dynamic_map2D.c  log.c  log.h  map2D.c  map2D_file_IO.c  map2D_internal.h  map2D_modification.c  map2D_openGL.c  plugins.c  plugins.h
src/maps/: base_actions.c  base_actions.h  dynamic_map2D.c  log.c  log.h  map2D.c  map2D.h  map2D_file_IO.c  map2D_internal.h
src/platform/: endianess.c  endianess.h  engine_common_glfw.c  engine_common_glfw.h  engine_common_keyboard.c  engine_common_keyboard.h  os_interaction.c  path_getters.c  path_getters.h  platforms.h
src/plugins/: actions.c  audio.c  openworld.c  text_rendering.c
src/plugins/map2D/: map2D.c  map2D_collision.c  map2D_file_IO.c  map2D_internal.h  map2D_modification.c  map2D_openGL.c  map2D_openworld.c  map2D_text_rendering.c
test/: main.c  printMap2D.c
test1/: main.c  platformTest.c  utilsTest.c
test2/: game.ini  main.c  printMap2D.c  printMap2D.h
test2/textures/: img_1.xcf.bz2
test3/: main.c  printMap2D.c  printMap2D.h
test3/textures/: img_0.xcf.bz2
